--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@fastify/formbody": "^8.0.0",
     "@fastify/websocket": "^11.2.0",
+    "@sendgrid/mail": "^8.1.5",
     "axios": "^1.11.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
